# KKEdit

./: .gitignore  BUGS-ETC  ChangeLog  INSTALL  KKEdit.LFSBuild  Makefile.am  Makefile.in  README  README.md  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  fr_FR.po  index.html  kkedit.pot  kkedit_fr_FR.po  makenagtime  makepackage  makepkg  makepo  remakesourcelist
Example External Tools/: README
Example External Tools/Scripts/: OpenManPage  RunAsScript  ToLowerCase  ToUpperCase
Example External Tools/Tools/: Comment-Selection  New-Tool  Open-Man-Page  findAPI
Example External Tools/User Submitted Tools/scripts/: EncodingInfo  RemoveBlankLines  RemoveComments  RemoveExtraSpaces  Sort  SortUnique  Statistics  UnComment
Example External Tools/User Submitted Tools/tools/: Delete-Comments  Statistics
Example External Tools/scripts/: CommentSelection
Example External Tools/tools/: Comment-Selection  Create-C-Files  Open-Man-Page  Run-As-Root-Script  Run-As-Script  To-Lower-Case  To-Upper-Case
KKEdit/: flagsandlibs  sources
KKEdit/app/: Makefile.am  Makefile.in
KKEdit/debug/: Makefile.am
KKEdit/goodies/: opensession  printpaths  testscript
KKEdit/kkeditmsg/: main.cpp
KKEdit/plugins/: common.h  kkedit-plugins.h
KKEdit/plugins/Clipboard/: ClipboardPlugin.pot  ClipboardPlugin_fr_FR.po  Makefile.am  Makefile.in  clipboard.cpp  makepo
KKEdit/plugins/ClipboardPlugin/: ClipboardPlugin.pot  ClipboardPlugin_fr_FR.po  Makefile  Makefile.am  Makefile.in  clipboardplugin.cpp  makepo
KKEdit/plugins/FileBrowser/: FileBrowser.pot  FileBrowser_fr_FR.po  Makefile  Makefile.am  Makefile.in  exportmap  filebrowser.cpp  makepo
KKEdit/plugins/FileBrowser/po/fr_FR/LC_MESSAGES/: FileBrowser.mo
KKEdit/plugins/MacroPlugin/: macroplugin.cpp
KKEdit/plugins/SessionManager/: Makefile  Makefile.am  Makefile.in  SessionManager.pot  SessionManager_fr_FR.po  exportmap  makepo  sessionmanager.cpp
KKEdit/plugins/SessionManager/po/fr_FR/LC_MESSAGES/: SessionManager.mo
KKEdit/plugins/SymbolMenu/: Makefile.am  Makefile.in  exportmap  makepo  (+1 more)
KKEdit/plugins/SymbolMenuPlugin/: Makefile.am  Makefile.in  SymbolMenuPlugin.pot  SymbolMenuPlugin_fr_FR.po  indicator-chars.txt  symbolmenuplugin.cpp
KKEdit/plugins/TerminalPane/: Makefile  Makefile.am  Makefile.in  TerminalPane.pot  TerminalPane_fr_FR.po  makepo  terminalpane.cpp
KKEdit/plugins/TerminalPane/po/fr_FR/LC_MESSAGES/: TerminalPane.mo
KKEdit/pole/: Makefile.am  Makefile.in  main.cpp
KKEdit/resources/: example-plugin
KKEdit/src/: Doxyfile  backclass.cpp  backclass.h  bookmarks.cpp  bookmarks.h  callbacks.cpp  callbacks.h  completion.cpp  completion.h  encoding.cpp  encoding.h  files.cpp  files.h  functioncallbacks.cpp  functioncallbacks.h  globals.cpp  globals.h  guis.cpp  guis.h  internet.cpp  internet.h  kkedit-includes.h  kkedit-plugins.h  main.cpp  main.cpp-1  navcallbacks.cpp  navcallbacks.h  pages.cpp  pages.h  pluginclass.cpp  pluginclass.h  plugins.cpp  plugins.h  scripting.cpp  scripting.h  searchcallbacks.cpp  searchcallbacks.h  sliceclass.cpp  sliceclass.h  spellcheck.cpp  (+6 more)
KKEdit/unstable-plugins/: common.h
KKEdit/unstable-plugins/BrowserPlugin/: Makefile.am  Makefile.in  browserplugin.cpp  exportmap
KKEdit/unstable-plugins/DebuggerPlugin/: Debugger.pot  Debugger_fr_FR.po  Makefile.am  Makefile.in  debugger.cpp  exportmap  makepo  tdata
KKEdit/unstable-plugins/DebuggerPlugin/po/fr_FR/LC_MESSAGES/: Debugger.mo
KKEdit/unstable-plugins/DebuggerPlugin/rawdata/: backtrace.xcf  breakpoint.xcf  continue.xcf  debug.xcf  endloop.xcf  exit.xcf  finish.xcf  interupt.xcf  into.xcf  next.xcf  open.xcf  outof.xcf  query.xcf  set.xcf  unset.xcf
artwork/: KKEdit.xcf
autom4te.cache/: output.0  output.1  output.3  output.4  output.5  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5
demotoools/: CheckOut  InsertDate  MakeExecutable  ReOpenAsRoot
docs/: help.en.html  help.fr.html  index.html
gtk-kkedit/: .gitignore  ChangeLog  INSTALL  KKEdit.LFSBuild  Makefile.am  Makefile.in  config.h.in  configure  configure.ac  kkedit_fr_FR.po  makepkg  makepo
gtk-kkedit/KKEdit/: flagsandlibs
gtk-kkedit/KKEdit/app/: Makefile.am  Makefile.in
gtk-kkedit/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
qt5-kkedit/: README  configure.ac  makepkg  remakesourcelist
qt5-kkedit/KKEdit/: flagsandlibs  sources
qtbranch/: ChangeLog  Makefile.am  configure.ac  makepo
qtbranch/KKEdit/: flagsandlibs
qtbranch/KKEdit/app/: Makefile.am
qtbranch/KKEdit/src/: QT_document.cpp  QT_document.h  QT_highlighter.cpp  QT_menuitem.cpp  QT_menuitem.h  backclass.cpp  backclass.h  callbacks.cpp  callbacks.h  completion.cpp  completion.h  encoding.cpp  encoding.h  files.cpp  files.h  globals.cpp  globals.h  guis.cpp  guis.h  kkedit-includes.h  kkedit-plugins.h  main.cpp  moc_QT_document.cpp  moc_QT_highlighter.cpp  moc_QT_menuitem.cpp  navcallbacks.cpp  navcallbacks.h  pluginclass.cpp  pluginclass.h  plugins.cpp  plugins.h  searchcallbacks.cpp  searchcallbacks.h  sliceclass.cpp  sliceclass.h  spellcheck.cpp  spellcheck.h  textbuffer.cpp  textbuffer.h
qtbranch/artwork/: KKEdit.xcf  KKEditPlug.xcf
trunk/: ChangeLog  INSTALL  configure.ac  kkedit_fr_FR.po  makepkg
trunk/KKEdit/: flagsandlibs
trunk/KKEdit/app/: Makefile.am
trunk/KKEdit/pole/: main.cpp
trunk/KKEdit/resources/Example External Tools/User Submitted Tools/scripts/: NumberLines  RemoveLineNumbers
trunk/KKEdit/resources/Example External Tools/User Submitted Tools/tools/: Number-Lines  Remove-Line-Numbers
trunk/KKEdit/resources/help/: help.en.html  help.fr.html
trunk/KKEdit/resources/pixmaps/: KKEditRoot.desktop
trunk/KKEdit/src/: Doxyfile  backclass.cpp  backclass.h  callbacks.cpp  callbacks.h  completion.cpp  encoding.cpp  files.cpp  globals.cpp  globals.h  guis.cpp  guis.h  kkedit-includes.h  main.cpp  navcallbacks.cpp  pluginclass.cpp  pluginclass.h  plugins.cpp  searchcallbacks.cpp  searchcallbacks.h  sliceclass.cpp  spellcheck.cpp  textbuffer.cpp  textbuffer.h
trunk/po/fr_FR/LC_MESSAGES/: kkedit.mo
(+95 files in other folders)
